--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <header>
     <img src="https://upload.wikimedia.org/wikipedia/commons/6/61/HTML5_logo_and_wordmark.svg" alt="Logo HTML5">
     <h1>Aprender HTML es muy divertido</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae quam optio nesciunt atque iure  animi dicta velit
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae quam optio nesciunt atque iure  animi dicta velit</p>
     <p>Lorem ipsum dolor sit amet, <span><strong>consectetur</strong></span> adipisicing elit. Molestiae quam optio nesciunt atque iure  animi dicta velit</p>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae quam optio nesciunt atque iure  animi dicta velit</p>
 </header>
 </body>     
 
-<html>
+</html>
